generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id           String   @id @default(cuid())
  email        String   @unique
  passwordHash String?
  displayName  String?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  sessions                Session[]
  categories              Category[]
  transactions            Transaction[]
  extensionTokens         ExtensionToken[]
  portfolioAccount        PortfolioAccount?
  cardMerchantMemory      CardMerchantMemory[]
  cardCategorizationRuns  CardCategorizationRun[]

  @@map("users")
}

model Session {
  id               String   @id @default(cuid())
  userId           String
  refreshTokenHash String   @unique
  expiresAt        DateTime
  createdAt        DateTime @default(now())
  userAgent        String?
  ipAddress        String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("sessions")
}

/// Optional primary address used for SIWE login / display (no holdings sync).
model PortfolioAccount {
  id                     String    @id @default(cuid())
  userId                 String    @unique
  address                String
  /// MetaMask Card widget balance from last extension sync (e.g. 685.84 mUSD).
  cardBalanceAmount      Decimal?  @db.Decimal(24, 8)
  cardBalanceCurrency    String?
  lastRefreshRequestedAt DateTime?
  lastSuccessfulSyncAt   DateTime?
  lastSyncState          String?   @default("IDLE")
  lastSyncError          String?
  createdAt              DateTime  @default(now())
  updatedAt              DateTime  @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([address])
  @@map("portfolio_accounts")
}

model Transaction {
  id            String             @id @default(cuid())
  userId        String
  source        TransactionSource  @default(CARD)
  externalId    String
  timestamp     DateTime
  merchantName  String?
  merchantRaw   String?
  fiatAmount    Decimal?           @db.Decimal(18, 2)
  fiatCurrency  String?
  cryptoAmount  Decimal?           @db.Decimal(36, 18)
  cryptoSymbol  String?
  status        CardTxStatus?
  parserVersion Int?
  rawHtml       String?
  categoryId    String?
  subcategoryId String?
  notes         String?
  rawData       Json?
  createdAt     DateTime           @default(now())
  updatedAt     DateTime           @updatedAt

  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  category    Category? @relation("TransactionCategory", fields: [categoryId], references: [id], onDelete: SetNull)
  subcategory Category? @relation("TransactionSubcategory", fields: [subcategoryId], references: [id], onDelete: SetNull)

  @@unique([userId, source, externalId])
  @@index([userId])
  @@index([userId, source, timestamp])
  @@index([timestamp])
  @@index([categoryId])
  @@index([subcategoryId])
  @@map("transactions")
}

enum TransactionSource {
  CARD
}

enum CardTxStatus {
  PENDING
  SETTLED
  DECLINED
  REFUNDED
}

model ExtensionToken {
  id         String    @id @default(cuid())
  userId     String
  tokenHash  String    @unique
  label      String?
  lastUsedAt DateTime?
  expiresAt  DateTime?
  createdAt  DateTime  @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("extension_tokens")
}

model Category {
  id        String   @id @default(cuid())
  userId    String?
  name      String
  color     String
  icon      String
  isSystem  Boolean  @default(false)
  parentId  String?

  createdAt DateTime @default(now())

  user          User?      @relation(fields: [userId], references: [id], onDelete: Cascade)
  parent        Category?  @relation("SubCategories", fields: [parentId], references: [id], onDelete: Cascade)
  subCategories Category[] @relation("SubCategories")

  transactions            Transaction[]         @relation("TransactionCategory")
  subTransactions         Transaction[]         @relation("TransactionSubcategory")
  cardMerchantMemories    CardMerchantMemory[]  @relation("MerchantMemoryCategory")
  cardMerchantMemoriesSub CardMerchantMemory[]  @relation("MerchantMemorySubcategory")

  @@index([userId, parentId])
  @@map("categories")
}

/// Learned mapping: normalized merchant key -> category (from AI confirmation or manual bulk assign).
model CardMerchantMemory {
  id            String   @id @default(cuid())
  userId        String
  merchantKey   String
  categoryId    String
  subcategoryId String?
  hitCount      Int      @default(1)
  learnedSource String   @default("ai")
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  category    Category  @relation("MerchantMemoryCategory", fields: [categoryId], references: [id], onDelete: Cascade)
  subcategory Category? @relation("MerchantMemorySubcategory", fields: [subcategoryId], references: [id], onDelete: SetNull)

  @@unique([userId, merchantKey])
  @@index([userId])
  @@map("card_merchant_memory")
}

enum CategorizationRunStatus {
  QUEUED
  RUNNING
  COMPLETED
  FAILED
  PARTIAL
}

model CardCategorizationRun {
  id                     String                   @id @default(cuid())
  userId                 String
  status                 CategorizationRunStatus    @default(QUEUED)
  trigger                String
  startedAt              DateTime?
  finishedAt             DateTime?
  scannedTxCount         Int                      @default(0)
  scannedMerchantCount   Int                      @default(0)
  memoryMatchedCount      Int                     @default(0)
  aiUpdatedCount          Int                     @default(0)
  skippedCount            Int                     @default(0)
  errorMessage           String?
  meta                   Json?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, startedAt(sort: Desc)])
  @@map("card_categorization_runs")
}
